Linkedin links on people, share to linkedin on blogs, we're hiring on honme page

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -102,6 +102,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Andrew Pitts</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/andrew-pitts-97a48b97/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Creative Director</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-andrew.jpg" | prepend: site.baseurl }}" alt="Andrew Pitts" />
@@ -134,6 +139,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Dean Aldridge</h2>
+                  <span class="linkedin-container">
+                    <a href="https://nz.linkedin.com/in/deanaldridge/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-dean.jpg" | prepend: site.baseurl }}" alt="Dean Aldridge" />
@@ -198,6 +208,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Ersin Buckley</h2>
+                  <span class="linkedin-container">
+                    <a href="https://nz.linkedin.com/in/ersin-buckley-4a855123/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-ersin.jpg" | prepend: site.baseurl }}" alt="Ersin Buckley" />
@@ -230,6 +245,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Ewen Cumming</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/ewen-cumming-85233b4/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-ewen.jpg" | prepend: site.baseurl }}" alt="Ewen Cumming" />
@@ -358,6 +378,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Jonathan Hollingsworth</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/jon-hollingsworth-6b13145/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-hollingsworth.jpg" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
@@ -455,6 +480,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Julia Hide</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/julia-hide-b25b6349/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-julia.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
@@ -487,6 +517,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Kerry Gibbs</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/kerry-gibbs-011bb61b/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Project Manager</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-kerry.jpg" | prepend: site.baseurl }}" alt="Kerry Gibbs" />
@@ -583,6 +618,11 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Nat Eustace</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/natalieeustace/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">UX Designer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-nat.jpg" | prepend: site.baseurl }}" alt="Nat Eustace" />
@@ -745,6 +785,11 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Steve Liew</h2>
+                  <span class="linkedin-container">
+                    <a href="http://www.linkedin.com/in/steveliew/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-steve.jpg" | prepend: site.baseurl }}" alt="Steve Liew" />
@@ -809,6 +854,11 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Tom Fenton</h2>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/tfentonz/" class="linkedin-link" target="_blank">
+                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <h3 class="bio-sub">DevOps Manager and Software Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-tom.jpg" | prepend: site.baseurl }}" alt="Tom Fenton" />
