--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,10 @@ ishome: true
       Learn more about our services
       <i class="icon-down-open-big"></i>
     </a>
+    <a href="/careers/" class="hiring-bubble js-fade-in-upZ">
+      <span class="hiring-text">We're hiring.</span>
+      <span class="apply-text">Apply now</span>
+    </a>
   </section>
 
   <section id="clients-panel" class="content-panel">
@@ -177,10 +181,10 @@ ishome: true
     <div class="panel-inner max-1000 clearfix js-fade-in-up">
       <div class="faux-table">
         <div class="faux-table-cell">
-          <h2 class="lowercase underline-orange">Locations</h2>
-          <p class="text-size-24">We operate from two main centres with opposing timezones.</p>
+          <h2 class="lowercase underline-orange">Our Location</h2>
+          <p class="text-size-24">We are based in Christchurch but we work with clients all over New Zealand and around the world..</p>
           <div class="cols-wrap">
-            <div class="col half-col" id="location-col-1">
+            <div class="col" id="location-col-1">
               <div class="circle-link">
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
                 <h4 class="circle-sub-hd lowercase">New Zealand</h4>
@@ -191,7 +195,7 @@ ishome: true
               <p class="text-black"><a href="mailto:hello@mediasuite.co.nz">hello@mediasuite.co.nz</a><br/>
               <a href="tel:+6433652887">+64 3 365 2887</a></p>
             </div> <!-- .col -->
-            <div class="col half-col" id="location-col-2">
+            <!--div class="col half-col" id="location-col-2">
               <div class="circle-link">
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Oslo</h3>
                 <h4 class="circle-sub-hd lowercase">Norway</h4>
@@ -200,7 +204,7 @@ ishome: true
                 </a>
               </div>
               <p class="text-black"><a href="mailto:oslo@mediasuite.co.nz">oslo@mediasuite.co.nz</a></p>
-            </div> <!-- .col -->
+            </div--> <!-- .col -->
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
       </div> <!-- .faux-table -->
