Add blog section to home page

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@ ishome: true
       <li><a href="#work-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
       <li><a href="#value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
       <li><a href="#culture-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">five</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#hello-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">six</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#blog-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">six</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#hello-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">seven</span><span class="side-nav-circle"></span></a></li>
     </ul>
   </nav>
 
@@ -174,6 +175,22 @@ ishome: true
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
       </div> <!-- .faux-table -->
+    </div>
+  </section>
+
+  <section id="blog-panel" class="content-panel">
+    <div class="panel-inner max-1000 clearfix js-fade-in-up">
+      <div class="faux-table">
+        <div class="faux-table-cell">
+          <h2 class="lowercase underline-orange">Latest from our blog</h2>
+          <div class="blog-posts clearfix">
+            <div class="blog-post js-load-blog-post"><i class="icon-spin loader"></i></div>
+            <div class="blog-post js-load-blog-post"><i class="icon-spin loader"></i></div>
+            <div class="blog-post js-load-blog-post"><i class="icon-spin loader"></i></div>
+          </div>
+          <a href="/blog" class="drop-btn orange-bg">View our blog</a>
+        </div>
+      </div>
     </div>
   </section>
 
