--- a/src/people/index.html
+++ b/src/people/index.html
@@ -44,7 +44,8 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Abbie’s daily to-do list is a long one. She takes care of our valuable clients, organises everything and everyone, and puts the “help” in Help Desk. A former journalist, you’ll find her fingerprints on all things written, from client advertisements and web pages to our social media accounts. Need something done in a hurry? Abbie is receptive to bribes including, but not limited to, wine, blue cheese and green tea. When not at the office she’s up in the Port Hills with her dog, Kevin or teaching a boxing bag some lessons.</p>
+                  <p>Abbie’s daily to-do list is a long one. She takes care of our valuable clients, organises everything and everyone, and puts the &ldquo;help&rdquo; in Help Desk. A former journalist, you’ll find her fingerprints on all things written, from client advertisements and web pages to our social media accounts. Need something done in a hurry? Abbie is receptive to bribes including, but not limited to, wine, blue cheese and green tea. When not at the office she’s up in the Port Hills with her dog, Kevin or teaching a boxing bag some lessons.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/sinuous"></div>
                 </div>
               </div>
             </div>
@@ -76,7 +77,8 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>With a background in corporate and commercial law, Abigail delights in dotted i’s and crossed t’s to an extent the rest of us reserve for smooth deployments and long weekends. Abi’s role is to make all those things that need to "just happen" happen, so the rest of us can focus on the fun stuff. </p>
+                  <p>With a background in corporate and commercial law, Abigail delights in dotted i’s and crossed t’s to an extent the rest of us reserve for smooth deployments and long weekends. Abi’s role is to make all those things that need to "just happen" happen, so the rest of us can focus on the fun stuff.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/abi"></div>
                 </div>
               </div>
             </div>
@@ -114,6 +116,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>After 15 years of perfecting his craft, Andrew has a body of work to his name which most can only aspire to. He has the rare knack of being able to take an idea and distil it down to its raw ingredients, thus providing the basis for a thoughtful design. Andrew inspires our teams to constantly try new things and to evolve.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/andrew"></div>
                 </div>
               </div>
             </div>
@@ -151,6 +154,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Dean's been wrangling pixels in browsers for a while now. He thought he had them all rounded up but then somebody let them into mobile phones, so he's back to square one. Having worked in large government organisations (too big) and agile start ups (too small), he’s enjoying the scale and variety at Media Suite (just right). Outside of work hours he's tending a domestic menagerie; current footprint count: 22.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/dean"></div>
                 </div>
               </div>
             </div>
@@ -183,6 +187,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Ed is passionate about learning and mentoring. He is actively engaged in the local tech community having organised dozens of talks at CHCH.js, run NodeSchool events and the southern hemisphere’s first Node.js conference. When he’s not writing code you might find him in the hills or jamming on the guitar.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ed"></div>
                 </div>
               </div>
             </div>
@@ -220,6 +225,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>The multi-talented Ersin is part of our Node.js team but is equally talented in PHP, Objective C, Ruby &amp; Go. His current fascination is with containerised services and learning to work remote. Check the surf forecast for his likely locale.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ersin"></div>
                 </div>
               </div>
             </div>
@@ -257,6 +263,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Ewen has over 12 years experience as a web developer and frontend engineer. He has a background in Systems Engineering and is passionate about technical design, deployment pipelines and mentoring. When he isn’t shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, tramping or spending time with his young family.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ewen"></div>
                 </div>
               </div>
             </div>
@@ -289,6 +296,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>A self-confessed “super cliched Canadian”, Fiona loves ice hockey and goes all out for Christmas. She moved here with her partner, Jeremy, and chihuahua, Megatron, to join the family business, before moving on to a new set of challenges as Media Suite’s administration superstar. She loves crushing her to-do list(s) and deftly combines a passion for detail with all things organisation and finances. A pro in pointe shoes, Fi has promised to teach the devs some ballet &hellip;</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/fiona"></div>
                 </div>
               </div>
             </div>
@@ -326,6 +334,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Kite Surfer, Glider Pilot, Yachtsman. George wears many hats but when he's not playing wind sports (or wearing hats) you'll find him pulling strings, peddling our wares and generally keeping the Media Suite's wheels spinning. While he has spent almost 20 weeks on crutches this year it has hardly slowed him down.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/george"></div>
                 </div>
               </div>
             </div>
@@ -363,6 +372,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>As our resident anthropologist, James focusses on the relationship between people, systems and technology. Whether he's developing relationships with the tech community, tweaking internal processes or facilitating team meetings, James makes sure that people are considered with everything we do. When he's not in the office, you're likely to find him at the disc golf course (it's kind of like golf frisbee), fishing from his Canadian Canoe (even though he's American), or venturing into the southern New Zealand wilds with his partner, BB.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jamesp"></div>
                 </div>
               </div>
             </div>
@@ -400,6 +410,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Jonathan has over 15 years experience working as a software engineer and then as a project manager on large IT projects with some of the UKs most well known brands. The lure of the NZ lifestyle and a passion to get back into code has brought him to Media Suite to join our Node.js team. Jonathan (aka Hollingsworth) is lucky enough to have settled in Queenstown with his wife and young family where he gets to snowboard in winter and mountain bike in the summer.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jonathanh"></div>
                 </div>
               </div>
             </div>
@@ -433,6 +444,7 @@ menuorder: 4
                 <div class="bio-body">
                   <p>Since he was a small boy Jonathan wanted to know how things work, this led to many hours spent taking things apart and sometimes putting them back together.</p>
                   <p>Nowadays there is less taking apart and more putting stuff together. His current weapon of choice is JavaScript.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jonathanp"></div>
                 </div>
               </div>
             </div>
@@ -502,6 +514,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Julia is a pixel perfectionist and cat fangirl. Having got most her way through a BSc in Computer Science she discovered her passion for the browser and hasn’t looked back. She is passionate about interaction design which brings practicality and flare to her work.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/julia"></div>
                 </div>
               </div>
             </div>
@@ -539,6 +552,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Kerry keeps track of what’s being delivered when, by whom and how we’ll do it. Kerry brings 15 years of experience in the digital, advertising and creative industries. Gaining knowledge dabbling in design, development and 3D modelling, before becoming a digital Producer then Project director. In her downtime she can be found in Bottle Lake Forest with her pup, Ranger, skiing at Mt Hutt or indulging her inner petrolhead at motorsport events.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/kerry"></div>
                 </div>
               </div>
             </div>
@@ -571,6 +585,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>As a <strike>recent</strike> convert from Ruby, Mark has blazed his way to being part of our core node.js team. He has a ton of software and mobile experience, is well versed in Agile methodologies and has a temperament that could soothe even the Mighty <strike>Eagle</strike> Unicorn.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/mark"></div>
                 </div>
               </div>
             </div>
@@ -603,6 +618,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Known for his snappy dressing (think waist coat with that top hat) and being ruthlessly efficient, Matt is one of our core developers who is equally well versed in JavaScript, Python and PHP.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/matt"></div>
                 </div>
               </div>
             </div>
@@ -640,6 +656,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Natalie is all about you. A fully fledged user-centred design nerd, she makes sure we focus on the people who actually use what we build, giving them the best possible user experience. She also digs collaborative design and testing workflows. In her down time she'll be doing a spot of DIY with borrowed tools or plotting her next move in her constant battle to keep Lily the Clingy Staffy safely inside the yard. You'll also find her scootering home along the estuary at a max speed of 47 kmph.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/natalie"></div>
                 </div>
               </div>
             </div>
@@ -672,6 +689,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Patrick is a craftsman who finds pleasure in perfecting his trade. After studying Mechanical Engineering at Boston University he fell into the tech startup world and has been building software ever since. Patrick is one of our remote developers.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/patrick"></div>
                 </div>
               </div>
             </div>
@@ -708,8 +726,8 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Pete is able to give structure to complex problems, competing requirements and growing backlogs. His background as a business analyst and passion for building the right thing keeps our project teams (and our clients) focused on delivering true value.
-Pete is a Project Management Professional, Prince2 Practitioner and is also a certified Scrum Master.</p>
+                  <p>Pete is able to give structure to complex problems, competing requirements and growing backlogs. His background as a business analyst and passion for building the right thing keeps our project teams (and our clients) focused on delivering true value. Pete is a Project Management Professional, Prince2 Practitioner and is also a certified Scrum Master.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/pete"></div>
                 </div>
               </div>
             </div>
@@ -741,8 +759,8 @@ Pete is a Project Management Professional, Prince2 Practitioner and is also a ce
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Richie is a technology evangelist whose passion for code is infectious. His enthusiasm for learning and continuous improvement has seeded a movement at Media Suite.
-Originally from Christchurch, Richie is now based in Oslo where he leads our European team. Richie is also an ancient history geek - currently engrossed in Assyria, Sumer and Akkad.</p>
+                  <p>Richie is a technology evangelist whose passion for code is infectious. His enthusiasm for learning and continuous improvement has seeded a movement at Media Suite. Originally from Christchurch, Richie is now based in Oslo where he leads our European team. Richie is also an ancient history geek - currently engrossed in Assyria, Sumer and Akkad.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/richie"></div>
                 </div>
               </div>
             </div>
@@ -812,6 +830,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                 </div>
                 <div class="bio-body">
                   <p>Steve has a background in corporate accounting but rather than convert his Singaporean accounting qualifications when he moved to NZ he decided to reboot his career into software development. After graduating from Dev Academy, Steve took up an internship with us - we decided he was too good to lose and is now a part of our core development team.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/steve"></div>
                 </div>
               </div>
             </div>
@@ -844,6 +863,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                 </div>
                 <div class="bio-body">
                   <p>Stu has 20 years experience working as a Software Engineer, Technical Architect and Software Development Manager in the financial and resources sectors. He has always taken on jobs where he could spend at least half of his time cutting code. Stu recently gave up “all that enterprise nonsense” and moved to Queenstown with his wife and two very demanding cats, Tippy and Charley. (Fish birthday cake anyone?) His new location means he can hit the ski slopes regularly, reserving a healthy disrespect for &ldquo;dem pesky snowboarders&rdquo;.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/stu"></div>
                 </div>
               </div>
             </div>
@@ -881,6 +901,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                 </div>
                 <div class="bio-body">
                   <p>Being tall, Tom has his head in the Cloud (think Amazon Web Services) and is constantly finding great ways to improve and monitor our hosting infrastructure. With over 15 years using Linux, the command-line-fu is strong with this one. When he isn't deploying to production, Tom can be found splashing around in a nearby pool or in the ocean. His suspicious aversion to coffee makes him something of an office curiosity.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/tom"></div>
                 </div>
               </div>
             </div>
