--- a/src/people/index.html
+++ b/src/people/index.html
@@ -105,7 +105,7 @@ menuorder: 4
                   <h3 class="bio-sub">Creative Director</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/andrew-pitts-97a48b97/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -142,7 +142,7 @@ menuorder: 4
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://nz.linkedin.com/in/deanaldridge/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -211,7 +211,7 @@ menuorder: 4
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://nz.linkedin.com/in/ersin-buckley-4a855123/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -248,7 +248,7 @@ menuorder: 4
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/ewen-cumming-85233b4/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -315,6 +315,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">George Wills</h2>
                   <h3 class="bio-sub">Managing Director</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/george-wills/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="George Wills" />
                   </div>
@@ -347,6 +352,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">James Pearson</h2>
                   <h3 class="bio-sub">Resident Anthropologist</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/james-pearson-84684376/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-james.jpg" | prepend: site.baseurl }}" alt="James Pearson" />
                   </div>
@@ -381,7 +391,7 @@ menuorder: 4
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/jon-hollingsworth-6b13145/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -483,7 +493,7 @@ menuorder: 4
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/julia-hide-b25b6349/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -520,7 +530,7 @@ menuorder: 4
                   <h3 class="bio-sub">Project Manager</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/kerry-gibbs-011bb61b/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -621,7 +631,7 @@ menuorder: 4
                   <h3 class="bio-sub">UX Designer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/natalieeustace/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -688,6 +698,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Pete Banks</h2>
                   <h3 class="bio-sub">Business Analyst &amp; Project Manager</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/peter-banks-945b808/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-pete.jpg" | prepend: site.baseurl }}" alt="Pete Banks" />
                   </div>
@@ -788,7 +803,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="http://www.linkedin.com/in/steveliew/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
@@ -857,7 +872,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                   <h3 class="bio-sub">DevOps Manager and Software Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/tfentonz/" class="linkedin-link" target="_blank">
-                      <img src="/img/client-logos/linkedin-logo.png" alt="Linkedin logo" class="linkedin-img">
+                      <img src="{{ "/img/linkedin-logo.png" | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
