Add effects to we're hiring bubble

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@ ishome: true
       Learn more about our services
       <i class="icon-down-open-big"></i>
     </a>
-    <a href="/careers/" class="hiring-bubble js-fade-in-upZ">
+    <a href="/careers/" class="hiring-bubble jiggle js-fade-in-up-delayed">
       <span class="hiring-text">We're hiring.</span>
       <span class="apply-text">Apply now</span>
     </a>
