Fix indentation, fix transform overrides on hiring bubble

--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,12 @@ ishome: true
       Learn more about our services
       <i class="icon-down-open-big"></i>
     </a>
-    <a href="/careers/" class="hiring-bubble jiggle js-fade-in-up-delayed">
-      <span class="hiring-text">We're hiring.</span>
-      <span class="apply-text">Apply now</span>
-    </a>
+    <div class="hiring-bubble-container js-fade-in-up-delayed">
+      <a href="/careers/" class="hiring-bubble">
+        <span class="hiring-text">We're hiring.</span>
+        <span class="apply-text">Apply now</span>
+      </a>
+    </div>
   </section>
 
   <section id="clients-panel" class="content-panel">
