Fix gulp CSS minify issues

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@ ishome: true
       <i class="icon-down-open-big"></i>
     </a>
     <div class="hiring-bubble-container js-fade-in-up-delayed">
-      <a href="/careers/" class="hiring-bubble">
+      <a href="/careers/" class="hiring-bubble jiggle">
         <span class="hiring-text">We're hiring.</span>
         <span class="apply-text">Apply now</span>
       </a>
