home page bubble alignment, people page: latest post display, remove people page filters, comment out Patrick and RIP Richie

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@ ishome: true
     <div class="hiring-bubble-container js-fade-in-up-delayed">
       <a href="/careers/" class="hiring-bubble jiggle">
         <span class="hiring-text">We're hiring.</span>
-        <span class="apply-text">Apply now</span>
+        <span class="apply-text">Learn more</span>
       </a>
     </div>
   </section>
